# ib

./: CMAKE.XTRA  CMakeLists.txt  INSTALLATION  README.md
build.OLD/: libibApps.dylib  libibDoc.dylib  libibLocal.dylib  libibSearch.dylib
docs/: re-Isearch-Handbook.odt
doctype/: HTMLEntities.cxx  autodetect.cxx  colondoc.cxx  colondoc.hxx  colongrp.cxx  dif.cxx  doctype.cxx  doctype.hxx  ejsondoc.cxx  ejsondoc.cxx.GOOD  ejsondoc.hxx  gilsxml.cxx  json_unicode_escape.cxx  json_unicode_escape.cxx.1  json_unicode_escape.cxx.2  json_unicode_escape.cxx.3  jsondoc.cxx  jsondoc.cxx.GOOD  jsondoc.hxx  jsondoc.hxx.GOOD  jsonlddoc.cxx  jsonlddoc.hxx  memodoc.cxx  oneline.cxx  sgmlnorm.cxx
doctype/plugins/: CMakeLists.txt  README.md  adobe_pdf.cxx  autoremote.cxx  djvu.cxx  estat.cxx  isoteia.cxx  msexcel.cxx  msoffice.cxx  msole.cxx  msppt.cxx  msword.cxx  null.cxx  odt.cxx  odt2.cxx  odt_j.cxx  pdfdoc.cxx  rtf.cxx  text.cxx  uspat.cxx
filters/xpdf-3.01-bsn/: 1.memo
filters/xpdf-3.01-bsn/xpdf/: PDFDoc.cc  pdffonts  pdfimages  pdfinfo  pdftomemo  pdftomemo.cc  pdftops  pdftotext  xx.memo
filters/xpdf-4.05/xpdf/: CMakeLists.txt  pdftomemo.cc  pdftomemo.cc.ORIG
lib/plugins/: adobe_pdf.sob  autoremote.sob  djvu.sob  estat.sob  isoteia.sob  msexcel.sob  msoffice.sob  msole.sob  msppt.sob  msrtf.sob  msword.sob  null.sob  odt.sob  odt2.sob  odt_j.sob  pdfdoc.sob  rtf.sob  text.sob  uspat.sob
src/: .IB..LCA  .IB.ini  EmbeddingIndexer.hxx  Idelete.cxx  ParseWordsUTF8.cxx  SORT  _utf_StrToUpper.c  attrlist.cxx  attrlist.hxx  buffer.cxx  buffer_legacy.hxx  bytes.hxx  common.cxx  db_string.cxx  db_string.hxx  defs.cxx  defs.hxx  dfd.hxx  dfdt.cxx  dfdt.hxx  dft.cxx  dft.hxx  dictionary.cxx  dtreg.cxx  dtreg_list.hxx  fc.cxx  fc.hxx  fcache.cxx  fcache.hxx  fct.cxx  fct.hxx  fprec.cxx  fprec.hxx  fpt.cxx  fpt.hxx  fuzzy.cxx  fuzzy.hxx  ib_defs.hxx  ibtest_main.cxx  idb.cxx  (+56 more)
synonyms/: HOW_TO_USE  NOTE  TODO  code.py  cpu_docker.sh  docker_compose.yml  docker_compose_gpu.yml  docker_file  docker_light  generate_synonyms.py  generate_synonyms2.py  generate_synonyms3.py  generator.py  gpu_docker.sh  install_GPU.sh  requirements.txt
synonyms/docker/: BUILD  build-cpu  build-gpu  docker-compose.yml  dockerfile  generate_synonyms.py  generate_synonyms.py.OLD  read.me  requirements.txt  run-background  structure
synonyms/docker/texts/: environment.txt  geography.txt  hydrology.txt
